[package]
name = "fig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
sdl2-sys = "0.35.2"

[dependencies.x11rb]
version = "0.11.0"
features = [
    "xinerama",
]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = [
    "image",
]

