[package]
name = "fig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2-sys = "0.35.2"
gif = "0.12.0"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[dependencies.x11rb]
version = "0.11.0"
features = [
    "xinerama",
]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = [
    "image",
]
